# RiskPilot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  binary_performance_evaluator.py  decile_plot.py  multivariate_drift_monitor.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
examples/: advanced_multivariate_drift.ipynb  binary_performance_full_demo.ipynb  generate_synthetic_data.ipynb  homogeneous_groups_demo.ipynb  lookahead_demo.ipynb  multivariate_drift_monitor.ipynb  simple_usage.ipynb  synthetic_vintage_generator_demo.ipynb
riskpilot/: __init__.py
riskpilot/drift/: __init__.py
riskpilot/evaluation/: __init__.py  binary_performance_evaluator.py
riskpilot/synthetic/: __init__.py  synthetic_vintage_generator.py
riskpilot/utils/: __init__.py  io.py  samplers.py  scaler.py
tests/: test_evaluator.py  test_metrics.py  test_stress_pipeline.py  test_synthetic_gen.py  test_viz.py
