[metadata]
name = riskpilot
version = 0.3.0
description = Tools for model evaluation, synthetic portfolio generation, and drift monitoring.
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.2
    numpy>=1.26
    scikit-learn>=1.4
    scipy>=1.12
    plotly>=5.20
    pyarrow>=15
    tqdm>=4.66

[options.extras_require]
dev =
    pytest>=8
    pytest-cov>=4
    pre-commit>=3
    jupyterlab>=4
    black>=24
    isort>=5
    ruff>=0.4
